[package]
name = "doonop"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["sync", "rt-threaded", "rt-core", "macros", "signal"] }
thirtyfour = { version = "*", features = [] }
url = "*"
log = "0.4"
pretty_env_logger = "0.4"
clap = { git = "https://github.com/clap-rs/clap" }
ctrlc = "*"
serde_json = "*"
regex = "*"
async-trait = "0.1.41"
thiserror = "1.0.22"
