[package]
name = "doonop"
version = "0.1.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["sync", "rt-multi-thread", "macros", "signal", "time"] }
thirtyfour = { version = "0.24.2", features = [] }
url = "2.2.2"
log = "0.4"
pretty_env_logger = "0.4"
clap = { git = "https://github.com/clap-rs/clap" }
serde_json = "1.0.64"
regex = "1.5.4"
async-trait = "0.1.41"
anyhow = "1.0.40"
async-channel = "1.6.1"